Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10974

Impala cannot resolve columns of converted Iceberg table

    XMLWordPrintableJSON

Details

    • ghx-label-4

    Description

      When a regular Parquet/ORC table is converted to Iceberg via Hive, only the Iceberg metadata files need to be created. The data files can stay in place.

      This causes problems when the data files don't have field ids for the schema elements. Currently Impala resolves columns in data files based on Iceberg field ids, but since they are missing, Impala raises an error or returns NULLs.

      We could fallback to the default column resolution strategy when the data files lack field ids.

      Attachments

        Activity

          People

            boroknagyz Zoltán Borók-Nagy
            boroknagyz Zoltán Borók-Nagy
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: